@startuml
'https://plantuml.com/class-diagram

class GameTemplate {}

class FireSupplyProp {
    - propStrategy:PropStrategy
    + FireSupplyProp(int locationX, int locationY, int speedX, int speedY)
    + setPropStrategy(PropStrategy propStrategy):void
    + executeStrategy(HeroAircraft heroAircraft):void
}

interface PropStrategy {
    + firePropSet(HeroAircraft heroAircraft):void
}

class ChangeBallistic {
    + firePropSet(HeroAircraft heroAircraft):void
}

class IncreaseShootNum {
    + firePropSet(HeroAircraft heroAircraft):void
}

GameTemplate ..> FireSupplyProp

FireSupplyProp o--> PropStrategy

PropStrategy <|.. ChangeBallistic
PropStrategy <|.. IncreaseShootNum

@enduml